make app-wrapper padding smaller on mobile devices to prevent overflowing elements

--- a/styles/generator.css
+++ b/styles/generator.css
@@ -87,13 +87,3 @@
     width: 130px;
     height: 130px;
 }
-
-@media (max-width: 600px) {
-    .code__settings {
-        grid-template-columns: auto;
-    }
-
-    .label {
-        place-self: center;
-    }
-}
